--- a/sharding.toml
+++ b/sharding.toml
@@ -1,19 +1,20 @@
 [[shards]]
 name = "Mumbai"
 idx = 0
-
+address = "127.0.0.2:8081"
 
 [[shards]]
 name = "Singapore"
 idx = 1
-
+address = "127.0.0.3:8081"
 
 [[shards]]
 name = "NewYork"
 idx = 2
+address = "127.0.0.4:8081"
 
 
 [[shards]]
 name = "Moscow"
 idx = 3
-
+address = "127.0.0.5:8081"
